# info-to-action-agent

./: .env.example  .gitignore  Makefile  README.md  agent.py  cli.py  main.py  modular_agent.py  pyproject.toml
src/: modular_agent.py  settings.py
src/app/: typer.py
src/core/: log.py  settings.py
src/infra/client/: content_fetcher.py  google_client.py
src/modules/agent/: commands.py  dto.py
src/modules/agent/service/: agent.py  ai.py  calendar.py  content.py
tests/: conftest.py
tests/unit/: test_content_fetcher.py  test_content_service.py  test_dto.py
